# abides-jpmc-public

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER-GUIDE.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  pyrightconfig.json  test_breaking_changes.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
abides-core/: README.md
abides-core/abides_core/: __init__.py  abides.py  agent.py  generators.py  gym_adapter.py  kernel.py  latency_model.py  lifecycle.py  log_writer.py  message.py  observers.py  oracle.py  run_result.py  runner_hook.py  utils.py
abides-core/scripts/: abides
abides-core/tests/: test_generators.py  test_kernel.py
abides-gym/: pyproject.toml
abides-gym/abides_gym/envs/: core_environment.py  markets_daily_investor_environment_v0.py  markets_environment.py  markets_execution_custom_metrics.py  markets_execution_environment_v0.py
abides-gym/abides_gym/experimental_agents/: financial_gym_agent.py
abides-gym/scripts/: gym_runner.py  gym_runner_daily_investor.py  rllib_exec_custom_metrics.py  rllib_runner.py  simple_rllib_runner.py
abides-markets/: README.md  pyproject.toml
abides-markets/abides_markets/: __init__.py  generators.py  order_book.py  orders.py  price_level.py
abides-markets/abides_markets/agents/: __init__.py  base_execution_agent.py  exchange_agent.py  financial_agent.py  impact_order_agent.py  noise_agent.py  pov_execution_agent.py  trading_agent.py  twap_execution_agent.py  utils.py  value_agent.py
abides-markets/abides_markets/agents/background/: core_background_agent.py
abides-markets/abides_markets/agents/background_v2/: core_background_agent.py
abides-markets/abides_markets/agents/examples/: momentum_agent.py
abides-markets/abides_markets/agents/market_makers/: adaptive_market_maker_agent.py
abides-markets/abides_markets/config_system/: __init__.py  agent_configs.py  builder.py  builtin_registrations.py  compiler.py  models.py  registry.py  serialization.py  templates.py
abides-markets/abides_markets/configs/: rmsc03.py  rmsc04.py
abides-markets/abides_markets/messages/: market.py  marketdata.py  order.py  orderbook.py  query.py
abides-markets/abides_markets/models/: order_size_model.py
abides-markets/abides_markets/oracles/: data_providers.py  external_data_oracle.py  mean_reverting_oracle.py  oracle.py  sparse_mean_reverting_oracle.py
abides-markets/abides_markets/simulation/: __init__.py  extractors.py  metrics.py  profiles.py  result.py  runner.py  schemas.py
abides-markets/abides_markets/utils/: __init__.py
abides-markets/tests/: __init__.py  conftest.py  test_agent_fixes.py  test_amm_flatten.py  test_circuit_breaker.py  test_config_system.py  test_critical_fixes.py  test_execution_metrics.py  test_execution_numerical.py  test_external_data_oracle.py  test_fill_pnl_aggregation.py  test_gym_runner.py  test_impact_order_agent.py  test_long_simulation_health.py  test_market_boundaries.py  test_mean_reverting_oracle.py  test_metrics.py  test_orders.py  test_ou_process.py  test_pandas_integration.py  test_position_limit.py  test_replace_order_regression.py  test_risk_config.py  test_runner_v26.py  test_seed_replicability.py  test_sim.py  test_simulation.py  test_stop_orders.py  test_trading_agent_gotchas.py  test_twap_execution_agent.py
abides-markets/tests/orderbook/: __init__.py  test_data_methods.py  test_limit_orders.py  test_market_orders.py  test_orderbook_invariants.py  test_price_level.py  test_ptc_edge_cases.py  test_thin_market.py
docs/: ABIDES_CONFIG_SYSTEM.md  ABIDES_CUSTOM_AGENT_IMPLEMENTATION_GUIDE.md  ABIDES_METRICS_API.md  ABIDES_REFERENCE.md  ABIDES_REMEDIATION_PLAN.md  AGENT_ASSESSMENT.md  PARALLEL_SIMULATION_GUIDE.md
docs/active-plans/: kernel-improvements.md  rebrand-abides-ng.md
docs/ai/: HASUFEL_CONFIG_SYSTEM.md
docs/project/: HASUFEL_ONE_PAGER.md  HASUFEL_PLAN.md  event-logging-refactor-plan.md  one-pager.md  release-process.md  reproducibility.md  roadmap.md
docs/reference/: config-system.md  custom-agent-guide.md  data-extraction.md  kernel-architecture.md  llm-gotchas.md  logging-architecture.md  metrics-algorithms.md  metrics-api.md  parallel-simulation.md
notebooks/: Demo_ABIDES-Gym.ipynb  demo_ABIDES-Markets.ipynb  demo_Config_System.ipynb
version_testing/: evaluate_all_agents.py  test_config.py  test_current_vs_pastcommit.py
