[project]
name = "abides-rohan"
version = "v1.2.2"
description = "ABIDES: Agent-Based Interactive Discrete Event Simulation environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coloredlogs>=15.0.1",
    "gymnasium>=1.0.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas==3.0.0",
    "psutil>=6.0.0",
    "ray[rllib]>=2.40.0",
    "scipy>=1.14.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "p-tqdm>=1.4.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-autodoc-typehints>=2.5.0",
    "sphinx-book-theme>=1.1.0",
]

[project.scripts]
precommit = "pre_commit.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abides-core/abides_core", "abides-markets/abides_markets", "abides-gym/abides_gym"]

[tool.pytest.ini_options]
testpaths = ["abides-core/tests", "abides-markets/tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=7.1.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    "nb-clean>=4.0.1",
    "pre-commit>=4.5.1",
    "ruff>=0.8.0",
    "abides-rohan[test,docs]",
]
