[project]
name = "abides-hasufel"
version = "v2.4.0"
description = "ABIDES: Agent-Based Interactive Discrete Event Simulation environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coloredlogs>=15.0.1",
    "gymnasium>=1.0.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pandera>=0.20.0",
    "psutil>=6.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "ray[rllib]>=2.40.0",
    "scipy>=1.14.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "p-tqdm>=1.4.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-autodoc-typehints>=2.5.0",
    "sphinx-book-theme>=1.1.0",
]

[project.scripts]
abides = "abides_core.abides:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abides-core/abides_core", "abides-markets/abides_markets", "abides-gym/abides_gym"]

[tool.pytest.ini_options]
testpaths = ["abides-core/tests", "abides-markets/tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long (handled by black; unavoidable in strings/comments)
    "N801",  # class name should use CapWords (some gym env names use _v0 suffix by convention)
    "N802",  # function name should be lowercase (conflicts with inherited wakeup/receiveMessage conventions)
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "B006",  # mutable default argument (pre-existing patterns in orders and test helpers)
    "B008",  # function call in default argument (pre-existing patterns)
    "B028",  # no explicit stacklevel in warnings.warn (minor quality improvement, not a bug)
    "B905",  # zip() without explicit strict= (not yet required by project style)
    "UP007", # Use `X | Y` for union type annotations (project uses Optional consistently)
]

[tool.ruff.lint.isort]
known-first-party = ["abides_core", "abides_markets", "abides_gym"]

[tool.isort]
profile = "black"
known_first_party = ["abides_core", "abides_markets", "abides_gym"]

[tool.ruff.lint.per-file-ignores]
"abides-core/tests/*" = ["S101"]
"abides-markets/tests/*" = ["S101"]
"version_testing/*" = ["E402", "N801"]
"notebooks/*" = ["E402", "N801"]

[tool.coverage.run]
source = ["abides_core", "abides_markets", "abides_gym"]
omit = ["*/tests/*", "*/version_testing/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=7.1.0",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    "nb-clean>=4.0.1",
    "pre-commit>=4.5.1",
    "ruff>=0.8.0",
    "abides-hasufel[test,docs]",
]
