[project]
name = "abides-gym"
version = "2.6.0"
description = "ABIDES: Gymnasium and RLlib adapters for ABIDES market simulation"
readme = { file = "../README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
dependencies = [
    "abides-markets==2.6.0",
    "gymnasium>=1.0.0",
    "ray[rllib]>=2.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abides_gym"]

[tool.hatch.build.targets.sdist]
include = [
    "abides_gym",
    "../README.md",
    "../LICENSE",
    "../LICENSE-ORIGINAL.txt",
]
