[project]
name = "abides-gym"
version = "2.6.0"
description = "ABIDES: Gymnasium and RLlib adapters for ABIDES market simulation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Gabriele Di Corato" }]
maintainers = [{ name = "Gabriele Di Corato" }]
keywords = [
    "market simulation",
    "reinforcement learning",
    "gymnasium",
    "rllib",
    "quantitative finance",
    "abides",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "abides-ng==2.6.0",
    "gymnasium>=1.0.0",
    "ray[rllib]>=2.40.0",
]

[project.urls]
Homepage = "https://github.com/GabrieleDiCorato/abides-ng"
Repository = "https://github.com/GabrieleDiCorato/abides-ng"
Issues = "https://github.com/GabrieleDiCorato/abides-ng/issues"
Changelog = "https://github.com/GabrieleDiCorato/abides-ng/blob/main/CHANGELOG.md"
Documentation = "https://github.com/GabrieleDiCorato/abides-ng/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abides_gym"]
